# kitty-litter

./: .gitignore  Pipfile  README  config.yml  global.yml  index.html  plugins.py  pyproject.toml  requirements.txt
.github/workflows/: render-pages.yaml
blog/: back-to-data-compression.html  django-registration-redux.html  environment-driven-config.html  index.html  learning-pony.html  modern-vanilla-js-cookie-parsing.html  no-your-web-framework-not-mvc.html  parsing-search-strings.html  serialiser-hurry.html  simplest-api.html  wrapping-views-decorators.html
blog/tags/: compression.html  django.html  enum.html  forms.html
content/: cloud.yml
content/menu/: blog.yml  main.yml  recipe.yml
docs/: .style.scss.swp  index.html
docs/blog/: alternative-enum-choices.html  back-to-data-compression.html  django-registration-redux.html  environment-driven-config.html  index.html  intenum-choices-django.html  learning-pony.html  modern-vanilla-js-cookie-parsing.html  no-your-web-framework-not-mvc.html  parsing-search-strings.html  plugins-and-auto-discovery-python.html  serialiser-hurry.html  simplest-api.html  updating-two-models-single-post.html  vanilla-js-meets-djangos-csrf.html  wrapping-views-decorators.html
pages/: index.yml  robots.txt  rss.yml  snippets.yml  style.scss
pages/blog/: alternative-enum-choices.yml  back-to-data-compression.yml  building-my-own-ssg.yml  django-and-model-inheritance.yml  django-file-name-conventions.yml  django-formsets.yml  django-semi-dry-fields.yml  (+22 more)
templates/: blog_index.html  cloud.html  default.html  menu.html  tag_index.html
(+47 files in other folders)
