[tool.poetry]
name = "kitty-litter"
version = "0.1.0"
description = ""
authors = ["Curtis Maloney <curtis@tinbrain.net>"]

[tool.poetry.dependencies]
python = "^3.8"
gilbert = "^0.5.0"
lxml = "^4.5.0"
pygments = "^2.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
